// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiPage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="wuiPage testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiPage restrict width can be set to a custom number 1`] = `
<div
  aria-label="aria-label"
  class="wuiPage wuiPage--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;

exports[`WuiPage restrict width can be set to a custom value and measurement 1`] = `
<div
  aria-label="aria-label"
  class="wuiPage wuiPage--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:24rem"
/>
`;

exports[`WuiPage restrict width can be set to a default 1`] = `
<div
  aria-label="aria-label"
  class="wuiPage wuiPage--restrictWidth-default testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
